# MatrixDeterminantCalculator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.TXT  README.md  build.bat  extreme-dataset.config  install-ninja-source.bat  main.c  oldtestset.config  pseudo-code.txt  run.bat  test.ps1
